portfolio/src/main/webapp/style.css
html {
  scroll-behavior: smooth;
}

nav {
  overflow: hidden;
}

nav:after {
  content: "";
  display: table;
  clear: both;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #002229;
  position: fixed;
  top: 0;
  width: 100%;

}

nav li {
  float: left;
}

nav li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-family: 'Oswald', sans-serif;
  font-size: 24px;
}

nav li a:hover {
  background-color: #BDDBD2;
}

body {
  width: 100%;
  height: 100%;
  background-color: white;
  clear: both;
  margin-left: 0;
  margin-right: 0;
}

hr {
  width: 95%;
  height: 10px;
  background-color: #001114;
}

.circle {
 border-radius: 50%;
 padding: 0px;
 width: 400px;
 height: 400px;
}

h1 {
  text-align: center;
  color: #001114;
  font-family: "Oswald", sans-serif;
  text-transform: uppercase;
  font-size: 64px;
}

p {
  font-size: 24px;
  color: #002229;
  font-family: "Cardo", serif;
}

.centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/*For the different "page-like" sections of the website*/
.group {
  text-align: justify;
  padding: 30px;
  width: 100%;
  height: 100%;
}

.group li {
  font-size: 24px;
  color: #002229;
  font-family: "Cardo", serif;
}

.icon-links {
  font-size: 80;
}

.icon-links a {
  color: #002229;
}

#greeting-container {
  margin-top: 20px;
}

